feat: 실시간 핫한 토론을 시간창 캐스케이드로 정렬 (누적 랭킹 → 최근 활동)
"실시간 핫한 토론" 이 이름과 달리 전체 기간 누적 랭킹으로 동작하고 있었다.
집계 조건이 `time_stamp <= NOW()` 라 사실상 필터가 없었고, 실측 시 3~5위가
각각 271일 / 390일 / 396일 전 대화였다.

30분 → 8시간 → 24시간 → 72시간 순으로 5칸을 채우고, 그래도 남는 자리는
최근 생성 토론방으로 채운다. 단계 우선이 절대적이다 — 30분 창에 1건 있는 방이
8시간 창에 50건 있는 방보다 위다. 네 창은 모두 같은 30분 버킷 경계 T 에
앵커된 누적 구간이라, 랭킹 전체가 매 정각/30분에 한 번 갱신되고 그 사이엔 고정된다.

같이 고친 것 세 가지:

1. **정렬이 응답까지 보장되지 않았다.** 정렬·LIMIT 을 안쪽 파생 테이블에서만
   하고 바깥에서 조인을 두 번 더 걸었다. MySQL 은 파생 테이블의 정렬을 바깥까지
   보장하지 않는다. 웹은 이 순서에 `idx + 1` 로 1~5위 번호를 붙여 쓰고 있었다.
   정렬·LIMIT 을 모두 최외곽으로 옮겼다.

2. **동점에서 순서가 확정되지 않았다.** 시드로 한 번에 만든 방들이 created_at 이
   마이크로초까지 같다 (87~90, 84~86, 79~83). 창이 비면 전 항목이 chats=0 이라
   1~5위가 전부 동점으로 결정되는데, 그중 4개가 또 동점이라 순서가 임의였다.
   새로고침마다 순위가 섞일 수 있었다. chat_room_id 를 마지막 정렬 키로 넣었다.

3. **결과 개수를 5로 가정하고 있었다.** `for(i=0;i<5;i++)` 로 `List.get(i)` 를
   돌아서 자격 있는 방이 5개 미만이면 IndexOutOfBoundsException → 홈 화면 전체가
   500 이었다. 지금은 폴백이 5칸을 채우지만 방 자체가 적은 환경에서는 여전히
   짧게 나온다. 크기 기반 루프로 바꿨다.

버킷 경계는 SQL 의 NOW() 가 아니라 애플리케이션에서 계산해 파라미터로 넘긴다
(RankingWindow, 순수 함수). chat.time_stamp 는 LocalDateTime.now() 로 쓰는데
JVM 기본 시간대는 Application 에서 Asia/Seoul 로 고정돼 있고, DB 세션의 NOW() 는
Hikari connection-init-sql 의 SET time_zone='+09:00' 덕에 지금은 우연히 같은
벽시계를 가리킨다. 서버 OS·DB 자체는 UTC 다. 서로 무관한 두 설정에 정렬이
의존하면 한쪽만 바뀌어도 창이 9시간 어긋나 랭킹이 조용히 상시 빈다.
컬럼을 쓰는 시계와 창을 자르는 시계를 하나로 맞췄다.

응답 스키마는 그대로다. 다만 폴백으로 올라온 방은 대화가 없을 수 있고,
그 경우 `time` 이 빈 문자열로 나간다 (TimeProcessor 기존 동작).

테스트 11건 추가 — 네 창이 같은 T 에 앵커되는지, 중첩 순서가 유지되는지,
같은 30분 안에서 창이 고정되는지(슬라이딩이 아님), 자정·정시 경계,
결과가 0~4개일 때 터지지 않는지, 쿼리 순서가 그대로 보존되는지.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>